--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                     <li>
                                         <a class="active" href="index.html">Home</a>
                                     </li>
-                                    <li><a href="#">Who We Are</a></li>
+                                    <li><a href="about.html">Who We Are</a></li>
                                     <li>
                                         <a href="#">Our Mission</a>
                                     </li>
@@ -145,7 +145,7 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <li><a href="#">Who We Are</a></li>
+                <li><a href="about.html">Who We Are</a></li>
                 <li>
                     <a href="#">Our Mission</a>
                 </li>
@@ -664,22 +664,22 @@
                 <div class="col-xl-4 col-lg-6 col-md-6  wow fadeInUp2 animated" data-wow-delay='.1s'>
                     <div class="footer__widget mb-30">
                         <h5 class="semi-02-title mb-25">My Meta Foundation</h5>
-                       <p>MyMetaFoundation was created as a launch pad for NFT projects created by a group of global
-                           artists with the aim of not only creating awesome collectables and building
-                           strong communities within the NFT space, but also to give back by
-                           supporting as many global charities as possible.</p>
-                       <div class="footer-log mt-25">
+                        <p>MyMetaFoundation was created as a launch pad for NFT projects created by a group of global
+                            artists with the aim of not only creating awesome collectables and building
+                            strong communities within the NFT space, but also to give back by
+                            supporting as many global charities as possible.</p>
+                        <div class="footer-log mt-25">
                             <a href="index.html" class="footer-logo mb-30"><img src="assets/img/logo/footer-logo1.png"
-                            alt=""></a>
-                       </div>
+                                                                                alt=""></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp2 animated" data-wow-delay='.3s'>
                     <div class="footer__widget fot_abot mb-30 pl-40">
                         <h5 class="semi-02-title mb-25">Quick Link</h5>
                         <ul class="fot-list">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Who We Are</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">Who We Are</a></li>
                             <li><a href="#">Our Mission</a></li>
                             <li><a href="#">Collection Gallery</a></li>
                             <li><a href="#">Contact US</a></li>
@@ -712,7 +712,13 @@
                                     </div>
                                 </div>
                             </li>
-                        </ul> 
+                        </ul>
+                        <div class="form-area mb-30">
+                            <form action="">
+                                <input type="text" class="form-control" placeholder="Enter Your Email">
+                                <button class="theme_btn theme_btn_bg mt-10">subscribe now <span><i class="fas fa-envelope"></i></span></button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
