--- a/about.html
+++ b/about.html
@@ -280,12 +280,12 @@
     <!--about-us-area end-->
 
     <!--our-mission start-->
-    <section class="about-area bg-warning pt-130 pb-70">
+    <section class="join-volunteer-area grey-bg pos-rel pt-130 pb-195">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12">
-                    <div class="about-wrap-04 mb-60 pl-40 card shadow">
-                        <div class="section-title text-left mb-20 wow fadeInUp2 animated" data-wow-delay='.1s'>
+                    <div class="donar-information donation-form grey-bg2 mb-30">
+                        <div class="section-title text-left mb-50 wow fadeInUp2  animated" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp2;">
                             <h2>Our Mission</h2>
                         </div>
                         <ul class="about_list mt-30 mb-20 wow fadeInUp2 animated" data-wow-delay='.2s'>
@@ -299,10 +299,15 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12">
-                    <div class="about-img-02 pos-rel">
-                        <div class="about-img-02__thumb d-none d-lg-inline-block pr-45 wow fadeInUp2 animated"
-                             data-wow-delay='.1s'>
-                            <img src="assets/img/about/02.jpg" alt="">
+                    <div class="volunteer-box pos-rel">
+                        <div class="volunteer-box__img">
+                            <img src="assets/img/about/07.jpg" alt="">
+                        </div>
+                        <div class="volunteer-box__img-02">
+                            <img src="assets/img/about/08.jpg" alt="">
+                        </div>
+                        <div class="volunteer-box__shape">
+                            <img src="assets/img/shape/14.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -312,7 +317,7 @@
     <!--our-mission end-->
 
     <!--our-collection start-->
-    <section class="gallery-area pb-100 pr-55 pl-55 pt-100">
+    <section class="gallery-area pb-100 pr-55 pl-55 pt-195">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 offset-xl-3">
