--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-2 col-lg-2 col-md-6 col-6">
-                        <div class="logo">
-                            <a class="logo-img" href="index.html"><img src="assets/img/logo/header_logo_one.png"
+                        <div class="logo p-2">
+                            <a class="logo-img" href="index.html"><img src="assets/img/logo/logo1.png"
                                     alt=""></a>
                         </div>
                     </div>
@@ -221,14 +221,33 @@
                                 <h2>Launch pad for NFT projects</h2>
                             </div>
                             <p>Strong communities within the NFT space, but also to give back by supporting as many global charities as possible</p>
-                            <ul class="about_list mt-30 mb-20 wow fadeInUp2 animated" data-wow-delay='.2s'>
-                                <li>The MyMetaFoundation was created as a launch pad for NFT projects created by a group of global
+                            <p class="mt-30 mb-20 wow fadeInUp2 animated" data-wow-delay='.2s'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac purus sed mi lacinia
+                                    pulvinar at vitae massa. Nullam purus erat, hendrerit et magna a, vulputate porta neque.
+                                    Aenean mattis nisl non ligula dignissim lobortis. Nunc sit amet mauris vel justo vehicula
+                                    faucibus. Fusce blandit, erat sed pretium mattis, orci tellus blandit purus, et tempus
+                                    risus ex vitae nisi. Ut blandit nulla sed arcu tincidunt rhoncus. Donec semper suscipit
+                                    dolor, ac venenatis nisl feugiat ut. Quisque dictum massa justo, non vulputate massa
+                                    interdum et. Suspendisse quis condimentum sem, eget aliquam mauris. Nam eu enim eu lectus
+                                    gravida consectetur id a orci. Donec tincidunt nisl at sem tristique, sed ullamcorper ex
+                                    egestas. Pellentesque rhoncus enim justo, a blandit tellus efficitur ac. Donec augue nisl,
+                                    varius eget lobortis ut, varius nec metus. Praesent sed imperdiet lectus, vitae blandit
+                                    metus. Curabitur ac mi quis risus aliquet fermentum et at mi.</p>
+                                <p class="mt-30 mb-20 wow fadeInUp2 animated" data-wow-delay='.3s'>Curabitur urna ligula, tincidunt id cursus nec, malesuada et magna. Donec eu dignissim tortor. Lorem
+                                    ipsum dolor sit amet, consectetur adipiscing elit. Praesent convallis, massa id pharetra molestie,
+                                    nisl ex scelerisque ipsum, in ullamcorper nisl mi ac nisi. Praesent sagittis porttitor tincidunt.
+                                    Phasellus commodo, arcu vitae rutrum consectetur, leo lorem varius dui, sit amet consequat velit
+                                    sapien ac felis. Aliquam vestibulum nisi vitae arcu posuere, vitae ultrices diam iaculis. Class
+                                    aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis consectetur
+                                    tortor id ligula ornare, sed aliquet massa aliquet. Nulla sit amet urna a eros sodales lacinia non
+                                    quis ex. Phasellus tempor massa eget justo convallis interdum. Phasellus auctor, felis sit amet
+                                    interdum aliquet, massa arcu rutrum sem, id consequat dolor risus accumsan dolor. Nunc maximus
+                                    dolor lacus, porttitor ultricies orci laoreet id. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Nunc faucibus, turpis ut luctus egestas, turpis dolor elementum arcu, quis tempor risus nisi eget tellus.
+                                    Fusce tristique, urna eu pharetra facilisis, urna dui pulvinar nibh, non sagittis nulla urna non dolor.</p>
+                                <p class="mt-30 mb-20 wow fadeInUp2 animated" data-wow-delay='.4s'>The MyMetaFoundation was created as a launch pad for NFT projects created by a group of global
                                     artists with the aim of not only creating awesome collectables and building strong communities
-                                    within the NFT space, but also to give back by supporting as many global charities as possible.</li>
-                                <li>We have colaborated with The Giving Block, an organization whose partnerships with 1000+ pro-crypto
-                                    charitable foundations enables donations to be made directly to the partner charities or The Giving
-                                    Block’s own Crypto Adoption Fund in a variety of cyrptocurrencies.</li>
-                            </ul>
+                                    within the NFT space, but also to give back by supporting as many global charities as possible.</p>
                         </div>
                     </div>
                 </div>
