--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-xl-2 col-lg-2 col-md-6 col-6">
-                    <div class="logo">
-                        <a class="logo-img" href="index.html"><img src="assets/img/logo/header_logo_one.png"
+                    <div class="logo p-2">
+                        <a class="logo-img" href="index.html"><img src="assets/img/logo/logo1.png"
                                                                    alt=""></a>
                     </div>
                 </div>
