--- a/about.html
+++ b/about.html
@@ -339,7 +339,7 @@
                                 </div>
                                 <div class="gallery__content">
                                     <a class="popup-image" href="assets/img/gallery/01.jpg"><i class="far fa-plus"></i></a>
-                                    <h3><a href="gallery-2.html">Hungry Children</a></h3>
+                                    <h3><a href="#">Hungry Children</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -351,7 +351,7 @@
                                 </div>
                                 <div class="gallery__content">
                                     <a class="popup-image" href="assets/img/gallery/07.jpg"><i class="far fa-plus"></i></a>
-                                    <h3><a href="gallery-2.html">Hungry Children</a></h3>
+                                    <h3><a href="#">Hungry Children</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -363,7 +363,7 @@
                                 </div>
                                 <div class="gallery__content">
                                     <a class="popup-image" href="assets/img/gallery/08.jpg"><i class="far fa-plus"></i></a>
-                                    <h3><a href="gallery-2.html">Hungry Children</a></h3>
+                                    <h3><a href="#">Hungry Children</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                                 </div>
                                 <div class="gallery__content">
                                     <a class="popup-image" href="assets/img/gallery/01.jpg"><i class="far fa-plus"></i></a>
-                                    <h3><a href="gallery-2.html">Hungry Children</a></h3>
+                                    <h3><a href="#">Hungry Children</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -393,7 +393,7 @@
                                 </div>
                                 <div class="gallery__content">
                                     <a class="popup-image" href="assets/img/gallery/01.jpg"><i class="far fa-plus"></i></a>
-                                    <h3><a href="gallery-2.html">Hungry Children</a></h3>
+                                    <h3><a href="#">Hungry Children</a></h3>
                                 </div>
                             </div>
                         </div>
